# textures_testing

m04-textures/: CMakeLists.txt  callbacks.h
m04-textures/06-mixed-colors/: fragment_shader06.glsl  mixed-colors.cpp  vertex_shader06.glsl
